fixed overflow-x problem

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body {
+  overflow-x: hidden;
+}
 canvas {
   position: fixed;
   top: 0;
